syntax = "proto3";

package aspb;

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";


message CreateAnimeSerieServerRequest {
    int64 episodeID = 1;
}

message CreateAnimeSerieServerResponse {
    int64 episodeID = 1;
    int64 serverID = 2;
}
